chore(main): re-add config/workspace files & update TOC file;

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
 ## =================================================================================================
-## LAST UPDATED: 15-May-2022 @ 14:10 on "r2g2-md"
+## LAST UPDATED: 31-Jan-2026 @ 14:10 on "jugg-wd"
 ## =================================================================================================
 ## LINKS
 ## https://editorconfig.org/
